--- a/Clime/View/Base.lproj/Main.storyboard
+++ b/Clime/View/Base.lproj/Main.storyboard
@@ -10,30 +10,38 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--WeatherViewController-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Clime" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="WeatherViewController" id="BYZ-38-t0r" customClass="WeatherViewController" customModule="Clime" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="campus" translatesAutoresizingMaskIntoConstraints="NO" id="rhn-xp-VZs" userLabel="Background Image View">
+                                <rect key="frame" x="0.0" y="-1" width="414" height="738"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="686-HI-u7T" customClass="URWeatherView" customModule="URWeatherView">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shorts and short sleeves" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GqL-oV-EPn" userLabel="clothingLabel">
                                 <rect key="frame" x="112" y="357.66666666666669" width="190" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="biT-RS-qyU" userLabel="Top View">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="349.66666666666669"/>
                                 <subviews>
-                                    <view alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yIt-z2-Ijg" userLabel="Temperature View">
-                                        <rect key="frame" x="67" y="121.33333333333331" width="280" height="107"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yIt-z2-Ijg" userLabel="Temperature View">
+                                        <rect key="frame" x="77" y="121.33333333333331" width="260" height="107"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Low: 61°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WSg-xa-WSk" userLabel="lowTemperature">
-                                                <rect key="frame" x="143" y="65.000000000000014" width="81" height="27"/>
+                                                <rect key="frame" x="179" y="65.000000000000014" width="81" height="27"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="22"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="76°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E98-If-fvk" userLabel="currentTemperature">
@@ -43,46 +51,46 @@
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="137" id="nm3-z5-8th"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="90"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="High: 79°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HG9-LD-mmL" userLabel="highTemperature">
-                                                <rect key="frame" x="143" y="19.000000000000014" width="89" height="27"/>
+                                                <rect key="frame" x="171.33333333333334" y="19.000000000000014" width="88.666666666666657" height="27"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="27" id="ySn-Bj-ZHn"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="22"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="WSg-xa-WSk" firstAttribute="top" secondItem="HG9-LD-mmL" secondAttribute="bottom" constant="19" id="2aJ-iq-8SR"/>
-                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="WSg-xa-WSk" secondAttribute="trailing" constant="20" symbolic="YES" id="54m-GI-w8q"/>
+                                            <constraint firstAttribute="trailing" secondItem="HG9-LD-mmL" secondAttribute="trailing" id="3mE-pX-MeW"/>
                                             <constraint firstAttribute="bottom" secondItem="E98-If-fvk" secondAttribute="bottom" id="9ty-rt-e5S"/>
-                                            <constraint firstItem="WSg-xa-WSk" firstAttribute="leading" secondItem="E98-If-fvk" secondAttribute="trailing" constant="6" id="WTV-jf-ddT"/>
-                                            <constraint firstItem="WSg-xa-WSk" firstAttribute="leading" secondItem="E98-If-fvk" secondAttribute="trailing" constant="6" id="Wx1-Vi-rN2"/>
-                                            <constraint firstAttribute="width" constant="280" id="ZKu-oo-0RG"/>
-                                            <constraint firstItem="HG9-LD-mmL" firstAttribute="leading" secondItem="E98-If-fvk" secondAttribute="trailing" constant="6" id="bpN-RX-nuv"/>
-                                            <constraint firstItem="WSg-xa-WSk" firstAttribute="leading" secondItem="E98-If-fvk" secondAttribute="trailing" constant="6" id="crT-MB-kWN"/>
+                                            <constraint firstItem="WSg-xa-WSk" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="E98-If-fvk" secondAttribute="trailing" constant="8" symbolic="YES" id="WTV-jf-ddT"/>
+                                            <constraint firstAttribute="width" constant="260" id="ZKu-oo-0RG"/>
+                                            <constraint firstItem="HG9-LD-mmL" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="E98-If-fvk" secondAttribute="trailing" constant="8" symbolic="YES" id="bpN-RX-nuv"/>
+                                            <constraint firstAttribute="trailing" secondItem="WSg-xa-WSk" secondAttribute="trailing" id="dfu-IY-tcL"/>
                                             <constraint firstItem="E98-If-fvk" firstAttribute="leading" secondItem="yIt-z2-Ijg" secondAttribute="leading" id="r2Y-SS-G54"/>
                                             <constraint firstItem="WSg-xa-WSk" firstAttribute="top" secondItem="HG9-LD-mmL" secondAttribute="bottom" constant="19" id="s4b-iR-v9Y"/>
                                             <constraint firstItem="HG9-LD-mmL" firstAttribute="top" secondItem="yIt-z2-Ijg" secondAttribute="top" constant="19" id="sJD-9Y-PvL"/>
-                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="HG9-LD-mmL" secondAttribute="trailing" constant="20" symbolic="YES" id="snd-Bv-Sit"/>
                                             <constraint firstItem="E98-If-fvk" firstAttribute="top" secondItem="yIt-z2-Ijg" secondAttribute="top" id="wpU-In-wZc"/>
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="yIt-z2-Ijg" firstAttribute="centerX" secondItem="biT-RS-qyU" secondAttribute="centerX" id="0XO-50-PUd"/>
                                     <constraint firstItem="yIt-z2-Ijg" firstAttribute="centerY" secondItem="biT-RS-qyU" secondAttribute="centerY" id="ZPL-KY-hsg"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="686-HI-u7T" secondAttribute="bottom" id="7mw-nS-xIb"/>
+                            <constraint firstItem="686-HI-u7T" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="H5f-p3-2on"/>
+                            <constraint firstItem="686-HI-u7T" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Kbw-ip-cV0"/>
+                            <constraint firstItem="686-HI-u7T" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YGF-eL-2wM"/>
                             <constraint firstItem="GqL-oV-EPn" firstAttribute="top" secondItem="biT-RS-qyU" secondAttribute="bottom" constant="8" id="bbf-UT-MVA"/>
                             <constraint firstItem="biT-RS-qyU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="enN-oR-feR"/>
                             <constraint firstItem="GqL-oV-EPn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ltZ-Nk-v4e"/>
@@ -92,10 +100,20 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="clothingLabel" destination="GqL-oV-EPn" id="rSd-N0-3aX"/>
+                        <outlet property="highTemperatureLabel" destination="HG9-LD-mmL" id="ahX-Wo-Cab"/>
+                        <outlet property="lowTemperatureLabel" destination="WSg-xa-WSk" id="BqR-un-z1o"/>
+                        <outlet property="mainView" destination="686-HI-u7T" id="UYp-26-5fb"/>
+                        <outlet property="temperatureLabel" destination="E98-If-fvk" id="9ha-JC-5VN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
+            <point key="canvasLocation" x="136.23188405797103" y="132.88043478260872"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="campus" width="1080" height="1920"/>
+    </resources>
 </document>
