--- a/Clime/View/Base.lproj/Main.storyboard
+++ b/Clime/View/Base.lproj/Main.storyboard
@@ -18,28 +18,31 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="campus" translatesAutoresizingMaskIntoConstraints="NO" id="rhn-xp-VZs" userLabel="Background Image View">
-                                <rect key="frame" x="0.0" y="-1" width="414" height="738"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="686-HI-u7T" customClass="URWeatherView" customModule="URWeatherView">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rhn-xp-VZs" userLabel="background">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </imageView>
+                            <view hidden="YES" alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="686-HI-u7T" customClass="URWeatherView" customModule="URWeatherView">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shorts and short sleeves" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GqL-oV-EPn" userLabel="clothingLabel">
-                                <rect key="frame" x="112" y="357.66666666666669" width="190" height="21"/>
+                                <rect key="frame" x="112" y="338" width="190" height="60"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="biT-RS-qyU" userLabel="Top View">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="349.66666666666669"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="330"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yIt-z2-Ijg" userLabel="Temperature View">
-                                        <rect key="frame" x="77" y="121.33333333333331" width="260" height="107"/>
+                                        <rect key="frame" x="77" y="111.66666666666669" width="260" height="107"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Low: 61°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WSg-xa-WSk" userLabel="lowTemperature">
-                                                <rect key="frame" x="179" y="65.000000000000014" width="81" height="27"/>
+                                                <rect key="frame" x="179" y="64.999999999999986" width="81" height="27"/>
                                                 <fontDescription key="fontDescription" type="system" weight="light" pointSize="22"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -55,7 +58,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="High: 79°" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HG9-LD-mmL" userLabel="highTemperature">
-                                                <rect key="frame" x="171.33333333333334" y="19.000000000000014" width="88.666666666666657" height="27"/>
+                                                <rect key="frame" x="171" y="18.999999999999986" width="89" height="27"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="27" id="ySn-Bj-ZHn"/>
                                                 </constraints>
@@ -79,33 +82,55 @@
                                         </constraints>
                                     </view>
                                 </subviews>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="yIt-z2-Ijg" firstAttribute="centerX" secondItem="biT-RS-qyU" secondAttribute="centerX" id="0XO-50-PUd"/>
                                     <constraint firstItem="yIt-z2-Ijg" firstAttribute="centerY" secondItem="biT-RS-qyU" secondAttribute="centerY" id="ZPL-KY-hsg"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shorts and short sleeves" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZlW-hA-nuz" userLabel="umbrellaLabel">
+                                <rect key="frame" x="112" y="377" width="190" height="21"/>
+                                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="KDR-IB-TC6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="686-HI-u7T" secondAttribute="bottom" id="7mw-nS-xIb"/>
+                            <constraint firstItem="ZlW-hA-nuz" firstAttribute="leading" secondItem="GqL-oV-EPn" secondAttribute="leading" id="COc-j8-QcU"/>
                             <constraint firstItem="686-HI-u7T" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="H5f-p3-2on"/>
                             <constraint firstItem="686-HI-u7T" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Kbw-ip-cV0"/>
+                            <constraint firstItem="ZlW-hA-nuz" firstAttribute="top" secondItem="biT-RS-qyU" secondAttribute="bottom" constant="47" id="LdE-Pg-nGj"/>
+                            <constraint firstItem="rhn-xp-VZs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NsT-Vh-8Jw"/>
                             <constraint firstItem="686-HI-u7T" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YGF-eL-2wM"/>
                             <constraint firstItem="GqL-oV-EPn" firstAttribute="top" secondItem="biT-RS-qyU" secondAttribute="bottom" constant="8" id="bbf-UT-MVA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ZlW-hA-nuz" secondAttribute="bottom" constant="338" id="cMy-Tp-aSv"/>
                             <constraint firstItem="biT-RS-qyU" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="enN-oR-feR"/>
+                            <constraint firstItem="ZlW-hA-nuz" firstAttribute="centerX" secondItem="rhn-xp-VZs" secondAttribute="centerX" id="hzY-ze-8WZ"/>
+                            <constraint firstItem="rhn-xp-VZs" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="kBg-zZ-4S1"/>
                             <constraint firstItem="GqL-oV-EPn" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ltZ-Nk-v4e"/>
+                            <constraint firstAttribute="bottom" secondItem="rhn-xp-VZs" secondAttribute="bottom" id="r58-vx-awu"/>
                             <constraint firstItem="biT-RS-qyU" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="sVI-Uo-p9t"/>
                             <constraint firstItem="biT-RS-qyU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="uUu-Ju-cfQ"/>
                             <constraint firstItem="GqL-oV-EPn" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="vmp-et-x1k"/>
+                            <constraint firstItem="rhn-xp-VZs" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="xVN-fh-dAS"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="background" destination="rhn-xp-VZs" id="Abz-ae-w8q"/>
                         <outlet property="clothingLabel" destination="GqL-oV-EPn" id="rSd-N0-3aX"/>
                         <outlet property="highTemperatureLabel" destination="HG9-LD-mmL" id="ahX-Wo-Cab"/>
                         <outlet property="lowTemperatureLabel" destination="WSg-xa-WSk" id="BqR-un-z1o"/>
                         <outlet property="mainView" destination="686-HI-u7T" id="UYp-26-5fb"/>
                         <outlet property="temperatureLabel" destination="E98-If-fvk" id="9ha-JC-5VN"/>
+                        <outlet property="umbrellaLabel" destination="ZlW-hA-nuz" id="Eex-2h-lTw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -113,7 +138,4 @@
             <point key="canvasLocation" x="136.23188405797103" y="132.88043478260872"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="campus" width="1080" height="1920"/>
-    </resources>
 </document>
